[gd_scene load_steps=8 format=3 uid="uid://bpphko1fy2wbr"]

[ext_resource type="Script" path="res://Minions/player.gd" id="1_ee8m6"]
[ext_resource type="Texture2D" uid="uid://dl1kfj75co12v" path="res://resources/graphics/player/player.png" id="1_l1tep"]
[ext_resource type="Texture2D" uid="uid://k7joi1wn1y58" path="res://resources/graphics/decals/white.png" id="3_ur6ab"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3knvg"]
radius = 64.0078

[sub_resource type="Gradient" id="Gradient_jwurx"]
colors = PackedColorArray(0.117647, 1, 1, 0.639216, 0.603922, 1, 1, 0.196078)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_e84hb"]
gradient = SubResource("Gradient_jwurx")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_p5j5o"]
emission_shape = 1
emission_sphere_radius = 2.48
particle_flag_disable_z = true
spread = 12.27
gravity = Vector3(60, 0, 0)
initial_velocity_min = 750.0
initial_velocity_max = 1000.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.3
scale_max = 0.8
color = Color(0.117647, 1, 1, 0.384314)
color_ramp = SubResource("GradientTexture1D_e84hb")

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_ee8m6")

[node name="Character" type="Sprite2D" parent="."]
position = Vector2(1, -10)
rotation = 1.5708
texture = ExtResource("1_l1tep")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3knvg")

[node name="laserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="grenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(97, 9)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(94, 19)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(94, 1)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(98, 9)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_p5j5o")
texture = ExtResource("3_ur6ab")
lifetime = 0.2
one_shot = true
speed_scale = 1.25
explosiveness = 0.5
randomness = 0.45

[connection signal="timeout" from="laserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="grenadeTimer" to="." method="_on_grenade_timer_timeout"]
